Fix example heading cutting off glyphs

--- a/web-server/components/Overview/Overview.css
+++ b/web-server/components/Overview/Overview.css
@@ -19,7 +19,7 @@
 .example h3 {
   overflow: hidden;
   margin: 0 0 0.5em;
-  line-height: 1;
+  line-height: 1.2;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
